--- a/link.html
+++ b/link.html
@@ -6,5 +6,13 @@
 
 <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
 
+<p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+
+<p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+
+<p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+
+<p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+
 </body>
 </html>
